--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,25 @@
-version: '3.6'
+version: '3.7'
 services:
   web:
-    image: 'gitlab/gitlab-ee:latest'
+    image: 'gitlab/gitlab-ce:14.6.0-ce.0'
     restart: always
+    hostname: '127.0.0.1'
+    container_name: gitlab-ce
     ports:
-      - '8080:80'
-      - '4433:443'
-      - '2222:22'
+      - '80:80'
+      - '8443:443'
     volumes:
-      - '$GITLAB_HOME/config:/etc/gitlab'
-      - '$GITLAB_HOME/logs:/var/log/gitlab'
-      - '$GITLAB_HOME/data:/var/opt/gitlab'
-    shm_size: '256m'
+      - './gitlab_config:/etc/gitlab'
+      - './gitlab_logs:/var/log/gitlab'
+      - './gitlab_data:/var/opt/gitlab'
+    networks:
+      - gitlab
+  gitlab-runner:
+    image: 'gitlab/gitlab-runner:latest'
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - './config_runner:/etc/gitlab-runner'
+    restart: unless-stopped
+networks:
+  gitlab:
+    name: gitlab-network
